welcome.lessons.welcome.loopwhile.BaggleSeeker.scala.error
BaggleSeeker:1: error: illegal start of simple expression
while (!estSurBiscuit());
                        ^